--- a/api/src/main/resources/reports/isrMain.jrxml
+++ b/api/src/main/resources/reports/isrMain.jrxml
@@ -511,13 +511,21 @@
 			<property name="net.sf.jasperreports.json.field.expression" value="partOralPart3OutOf"/>
 			<fieldDescription><![CDATA[partOralPart3OutOf]]></fieldDescription>
 		</field>
-		<field name="totalOverall" class="java.lang.String">
-			<property name="net.sf.jasperreports.json.field.expression" value="totalOverall"/>
-			<fieldDescription><![CDATA[totalOverall]]></fieldDescription>
+		<field name="totalMultiOverall" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="totalMultiOverall"/>
+			<fieldDescription><![CDATA[totalMultiOverall]]></fieldDescription>
 		</field>
-		<field name="outOfOverall" class="java.lang.String">
-			<property name="net.sf.jasperreports.json.field.expression" value="outOfOverall"/>
-			<fieldDescription><![CDATA[outOfOverall]]></fieldDescription>
+		<field name="outOfMultiOverall" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="outOfMultiOverall"/>
+			<fieldDescription><![CDATA[outOfMultiOverall]]></fieldDescription>
+		</field>
+		<field name="totalWrittenOverall" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="totalWrittenOverall"/>
+			<fieldDescription><![CDATA[totalWrittenOverall]]></fieldDescription>
+		</field>
+		<field name="outOfWrittenOverall" class="java.lang.String">
+			<property name="net.sf.jasperreports.json.field.expression" value="outOfWrittenOverall"/>
+			<fieldDescription><![CDATA[outOfWrittenOverall]]></fieldDescription>
 		</field>
 	</subDataset>
 	<parameter name="SUBREPORT_DIR" class="java.lang.String"/>
@@ -1047,11 +1055,17 @@ Note that proficiency scores for the Grade 10 Literacy Assessment do not appear 
 							<subreportParameter name="writtenReasonedEstimatesOutOf">
 								<subreportParameterExpression><![CDATA[$F{writtenReasonedEstimatesOutOf}]]></subreportParameterExpression>
 							</subreportParameter>
-							<subreportParameter name="totalOverall">
-								<subreportParameterExpression><![CDATA[$F{totalOverall}]]></subreportParameterExpression>
+							<subreportParameter name="totalMultiOverall">
+								<subreportParameterExpression><![CDATA[$F{totalMultiOverall}]]></subreportParameterExpression>
 							</subreportParameter>
-							<subreportParameter name="outOfOverall">
-								<subreportParameterExpression><![CDATA[$F{outOfOverall}]]></subreportParameterExpression>
+							<subreportParameter name="outOfMultiOverall">
+								<subreportParameterExpression><![CDATA[$F{outOfMultiOverall}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="totalWrittenOverall">
+								<subreportParameterExpression><![CDATA[$F{totalWrittenOverall}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="outOfWrittenOverall">
+								<subreportParameterExpression><![CDATA[$F{outOfWrittenOverall}]]></subreportParameterExpression>
 							</subreportParameter>
 							<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "nme10summary.jasper"]]></subreportExpression>
 						</subreport>
@@ -1374,11 +1388,17 @@ Note that proficiency scores for the Grade 10 Literacy Assessment do not appear 
 							<subreportParameter name="writtenPlanningOutOf">
 								<subreportParameterExpression><![CDATA[$F{writtenPlanningOutOf}]]></subreportParameterExpression>
 							</subreportParameter>
-							<subreportParameter name="totalOverall">
-								<subreportParameterExpression><![CDATA[$F{totalOverall}]]></subreportParameterExpression>
+							<subreportParameter name="totalMultiOverall">
+								<subreportParameterExpression><![CDATA[$F{totalMultiOverall}]]></subreportParameterExpression>
 							</subreportParameter>
-							<subreportParameter name="outOfOverall">
-								<subreportParameterExpression><![CDATA[$F{outOfOverall}]]></subreportParameterExpression>
+							<subreportParameter name="outOfMultiOverall">
+								<subreportParameterExpression><![CDATA[$F{outOfMultiOverall}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="totalWrittenOverall">
+								<subreportParameterExpression><![CDATA[$F{totalWrittenOverall}]]></subreportParameterExpression>
+							</subreportParameter>
+							<subreportParameter name="outOfWrittenOverall">
+								<subreportParameterExpression><![CDATA[$F{outOfWrittenOverall}]]></subreportParameterExpression>
 							</subreportParameter>
 							<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "nmf10summary.jasper"]]></subreportExpression>
 						</subreport>
